# consumptionCLI

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: format-lint.yml  publish.yml
scripts/: .gitignore  README_COMMANDS.txt  README_TEMPLATE.md  demo_db.sh  generate.sh  readme.sh
src/consumptioncli/: __main__.py  config.py  constants.py  logging.py  utils.py
src/consumptioncli/commands/: ConsumableCommandHandler.py  PersonnelCommandHandler.py  SeriesCommandHandler.py  TagCommandHandler.py  __init__.py  command_handling.py  database.py  input.py  messages.py
src/consumptioncli/display/: formatting.py  stats.py  types.py
src/consumptioncli/display/lists/: ConsumableList.py  PersonnelList.py  SeriesList.py  TagList.py  __init__.py  list_handling.py
src/consumptioncli/display/views/: ConsumableView.py  PersonnelView.py  SeriesView.py  __init__.py
src/consumptioncli/lists/: ConsumableList.py  PersonnelList.py  SeriesList.py  __init__.py  list_handling.py
src/consumptioncli/parsing/: BetterNamespace.py  MainParser.py  __init__.py  actions.py  consumable_parsers.py  operators.py  parsing.py  personnel_parsers.py  series_parsers.py  tag_parsers.py  types.py
src/consumptioncli/utils/: __init__.py  utils.py
