[project]
name = "consumptioncli"
version = "3.1.0"
authors = [
  { name="track44", email="trackfortyfour@proton.me" },
]
description = "A CLI tool for tracking consumption of media including Novels, Movies, TV Series and more."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
  "tabulate>=0.9.0",
  "consumptionbackend~=3.1.0",
  "platformdirs~=4.5.1",
]

[project.urls]
"Homepage" = "https://github.com/track-44/consumptionCLI"
"Bug Tracker" = "https://github.com/track-44/consumptionCLI/issues"

[project.scripts]
cons = "consumptioncli.__main__:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.basedpyright]
reportAny = false
reportExplicitAny = false

[tool.ruff.lint]
select = ["I"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
